# morphlang-proto

./: Cargo.toml  README.md
morph/: Cargo.toml
morph-macro/: Cargo.toml
morph-macro/src/: codegen.rs  lib.rs
morph-standalone/: Cargo.toml
morph-standalone/src/: ast.rs  codegen.rs  grammar.lalrpop  main.rs
morph-standalone/tests/: ex1.morph  ex2.morph
morph-tests/: Cargo.toml
morph-tests/tests/: test.rs
morph/src/: ast.rs  codegen.rs  grammar.lalrpop  lib.rs  token.rs
morph/tests/: test.rs  test_codegen.rs
src/: ast.rs  grammar.lalrpop  lib.rs  main.rs
