[package]
name = "morph-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[build-dependencies]
lalrpop = { version = "0.20.0" }

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
morph = { path = "../morph", version = "0.1.0"}
