[package]
name = "morph-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.20.0" }

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
morph = { path = "../morph", version = "0.1.0"}
morph-macro = { path = "../morph-macro", version = "0.1.0"}